# digital-nomad-cn

./: .gitignore  36-month-roadmap.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  C盘清理.bat  C盘迁移到D盘.bat  FUNDING.yml  LICENSE  P60背诵资料.md  README.md  SECURITY.md  TESTING_GUIDE.md  agent-native-design.md  architecture-design.md  audit-report.md  branding-strategy.md  bridge-driving-sim.html  check_version.py  continue_install.py  country-cards.txt  create_physics.js  create_review.js  data-audit-report.md  datapackage.json  eslint.config.mjs  extracted_pdf.txt  extracted_pptx.txt  extracted_text.txt  fix_nomad.py  get-chatid-guide.md  github-repo-design.md  growth-strategy.md  guides-x-posts-us-stock-cn.md  i18n-audit-log.json  maigret-部署指南.md  next.config.ts  (+26 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: article_request.yml  bug_report.yml  data-update.md  data_contribution.yml  data_update.yml  feature_request.yml  i18n.yml  new-country.md  new_country.yml  performance.yml  question.yml  seo.yml
.github/workflows/: ci.yml  (+12 more)
FingerMagicLite/: README.md  file_content.txt  index.html
PhotoCrypt-Social/: DESIGN.md
api/: DEPLOYMENT.md  README.md  package.json  tsconfig.json  wrangler.toml
build-deploy/: asset-manifest.json
build-liquid-glass/: asset-manifest.json  index.html
build-temp/: asset-manifest.json  index.html
config/: mcporter.json
datasets/: README.md  _stats.json  _validation-report.json  china-passport.json  countries.json  index.json  reviewed-countries.json  visa-official-links.json
desktop-pet/: .gitignore  README.md  requirements.txt
docs/: 36MONTH_ROADMAP.md  404.html  AI_ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  ROADMAP.md  SEO_ARCHITECTURE.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  analytics.js  app.js  community.html  countries-data.js  globe.js  index.html  lang-switcher.js  legal.html  llms.txt  manifest.json  motion.js  offline.html  perf-monitor.js  process-geo.js  robots.txt  rss.xml  sitemap.xml  style.css  styles.css  sw.js  world-geo.json
e2e/: homepage.spec.ts
marketing/: SOCIAL_MEDIA_LAUNCH_KIT.md
openpoker/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  turbo.json  webbridge-test.json
openpoker/agent/: README.md  requirements.txt
openpoker/api/: openapi.yaml
openpoker/apps/cli/: Cargo.toml
openpoker/apps/cli/src/: main.rs
openpoker/apps/desktop/: package.json
openpoker/apps/desktop/src/: main.tsx
openpoker/apps/web/: index.html  package.json  serve.py
openpoker/apps/web/src/: App.tsx  wasm.ts
openpoker/apps/web/src/wasm/: openpoker_wasm.d.ts  openpoker_wasm.js  openpoker_wasm_bg.wasm  openpoker_wasm_bg.wasm.d.ts
openpoker/apps/web/wasm/: openpoker_wasm.js  openpoker_wasm_bg.wasm
openpoker/crates/openpoker/: Cargo.toml
openpoker/crates/openpoker/src/: lib.rs
openpoker/crates/poker-equity/: Cargo.toml
openpoker/crates/poker-equity/benches/: equity_benchmark.rs
openpoker/crates/poker-equity/src/: equity_calculator.rs  exact_enumeration.rs  lib.rs  matchup.rs  monte_carlo.rs  multiway.rs  progress.rs  simd_batch.rs
openpoker/crates/poker-eval/: Cargo.toml
openpoker/crates/poker-eval/benches/: eval_benchmark.rs
openpoker/crates/poker-eval/src/: evaluator.rs  lib.rs
openpoker/crates/poker-parser/: Cargo.toml
openpoker/crates/poker-parser/src/: lib.rs
openpoker/crates/poker-range/: Cargo.toml
openpoker/crates/poker-range/src/: filter.rs  lib.rs  matrix.rs  range_formatter.rs  range_ops.rs  range_parser.rs  range_set.rs  weight.rs
openpoker/crates/poker-solver/: Cargo.toml
openpoker/crates/poker-solver/src/: lib.rs
openpoker/crates/poker-trainer/: Cargo.toml
openpoker/crates/poker-trainer/src/: lib.rs
openpoker/crates/poker-types/: Cargo.toml
openpoker/crates/poker-types/src/: action.rs  board.rs  card.rs  error.rs  game.rs  hand.rs  lib.rs  player.rs  range.rs
openpoker/crates/wasm/: Cargo.toml
openpoker/crates/wasm/src/: lib.rs
openpoker/design/: 01-audit-report.md  02-architecture-design.md  03-algorithm-design.md  05-github-repo-design.md  06-growth-strategy.md  07-branding-strategy.md  08-36-month-roadmap.md  README.md
openpoker/docs/: README.md
pdf_texts/: 10_rules_and_writing_full.txt  11_final_review_full.txt  1_protein_basis_full.txt  2_sequence_alignment_full.txt  3_SS_prediction_full.txt  4_protein_3D_prediction_full.txt  5_protein_function_prediction_full.txt  6_drug_design_full.txt  7_membrane_proteins_full.txt  8_molecular_simulation_full.txt  9_cancer_biology_full.txt
qz_edna_analysis/: alpha_diversity.csv  asv_taxonomy.csv  braycurtis_distance.csv  edna_analysis_pipeline.py  feature_table.csv  pcoa_coordinates.csv  qc_stats.csv  species_composition.csv
schemas/: README.md  country.schema.json  index.json  reviewed-country.schema.json
scripts/: README.md  bump-sw-cache.js  check-site.mjs  fix-city-format.js  fix-hreflang.js  generate-countries-data.js  generate-sitemap.js  inject-freshness.js  inject-lang-switcher.js  optimize-performance.js  sync-simpanda-stock.mjs  sync-to-docs.js  update-dataset-stats.js  update-sitemap-i18n.js  validate-data.js  verify-api-deployment.mjs
supabase/: community.sql  inventory-sync.sql  schema.sql
tests/: api.test.ts  datasets.test.ts  digital-globe.test.ts  homepage-quickstart.test.ts  mcp-server.test.ts  reviewed-countries.test.ts  schemas.test.ts  sdk.test.ts  service-worker-cache.test.ts  setup.ts  visa-provenance.test.ts
tmp/: fixes.css  legacy.css  missing.css
website/: 404.html  GROWTH_STRATEGY.md  SEO_ARCHITECTURE.md  app.js  check-geo.js  check-geo2.js  countries-data-new.js  countries-data.js  country-cards-60.txt  globe.js  index.html  llms.txt  manifest.json  mobile-nav.js  new-country-data-entries.txt  offline.html  robots.txt  search-entries-60.txt  share.js  sitemap.xml  style.css  sw.js  theme.js  visa-cards-60.txt  world-geo.json
(+1715 files in other folders)
