[workspace]
resolver = "2"
members = [
    "crates/poker-types",
    "crates/poker-eval",
    "crates/poker-equity",
    "crates/poker-range",
    "crates/poker-solver",
    "crates/poker-parser",
    "crates/poker-trainer",
    "crates/openpoker",
    "crates/wasm",
    "apps/cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["OpenPoker Contributors"]
license = "MIT"
repository = "https://github.com/kfat77/openpoker"
homepage = "https://openpoker.dev"
keywords = ["poker", "texas-holdem", "equity", "solver", "gto"]
categories = ["games", "science"]
rust-version = "1.80"

[workspace.dependencies]
# Internal
poker-types = { path = "crates/poker-types" }
poker-eval = { path = "crates/poker-eval" }
poker-equity = { path = "crates/poker-equity" }
poker-range = { path = "crates/poker-range" }
poker-solver = { path = "crates/poker-solver" }
poker-parser = { path = "crates/poker-parser" }
poker-trainer = { path = "crates/poker-trainer" }

# External
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rayon = "1.10"
criterion = { version = "0.5", features = ["html_reports"] }
