[package]
name = "openpoker-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "OpenPoker CLI — Command line interface for poker analysis"

[[bin]]
name = "openpoker"
path = "src/main.rs"

[dependencies]
openpoker = { path = "../../crates/openpoker" }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
serde_json = "1.0"
