[package]
name = "openpoker-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "OpenPoker CLI — Command line interface for poker analysis"

[[bin]]
name = "openpoker"
path = "src/main.rs"

[dependencies]
poker-types = { workspace = true }
poker-eval = { workspace = true }
poker-equity = { workspace = true }
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
serde_json = "1.0"
