[package]
name = "poker-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Poker hand evaluator: 5/6/7 card evaluation"

[dependencies]
poker-types = { workspace = true }

[dev-dependencies]
# criterion = { workspace = true }

# [[bench]]
# name = "eval_benchmark"
# harness = false
