[package]
name = "poker-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core poker types: Card, Hand, Board, Range, Action"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
